# shellcode-executor

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md
.github/workflows/: build.yml
docs/: API.md  ARCHITECTURE.md  SECURITY.md
examples/: CMakeLists.txt  basic_loader.c  remote_fetch.c  xor_encoded.c
scripts/: build.sh  encode_shellcode.py
src/: main.c  scloader.h
src/crypto/: crypto.c  crypto.h
src/encoder/: base64.c  encoder.c  encoder.h  xor.c
src/loader/: loader.c  loader.h
src/remote/: remote.c  remote.h
src/utils/: hex.c  memory_info.c  utils.c  utils.h
tests/: CMakeLists.txt  test_encoder.c  test_loader.c  test_utils.c
